# MyBooks

./: .gitignore  CMakeLists.txt  MyBooksConfig.h.in  README.txt
src/: Books.glade  CMakeLists.txt  DataBase.cpp  DataBase.hpp  Gui.cpp  Gui.hpp  MyBooks.cpp  MyBooks.txt
